feat: add LevelResponse for APIs entity level